src/main/java/com/example/storeprojectstep1/errors/exception/Exception400.java
package com.example.storeprojectstep1.errors.exception;

public class Exception400 extends RuntimeException {
    public Exception400(String msg) {
        super(msg);
    }
}
